--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "email": "joshuayes@gmail.com",
     "url": "https://yeslee.me"
   },
-  "version": "1.0.0",
-  "main": "stories/index.stories.js",
+  "version": "1.0.1",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "start-storybook -p 6006",
