--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest-dom": "^3.5.0",
     "lodash": "^4.17.11",
     "numeral": "^2.0.6",
+    "react-transition-group": "^4.3.0",
     "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
