--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "decimal.js": "^10.2.0",
     "jest": "^24.8.0",
     "jest-dom": "^3.5.0",
+    "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
     "numeral": "^2.0.6",
     "react-transition-group": "^4.3.0",
