--- a/package.json
+++ b/package.json
@@ -23,23 +23,29 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@storybook/addon-info": "^5.2.3",
     "@testing-library/react": "^8.0.4",
+    "@types/jest": "^24.0.18",
     "antd": "^3.19.1",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.8.0",
     "d3": "^5.11.0",
     "decimal.js": "^10.2.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jest-dom": "^3.5.0",
     "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
     "numeral": "^2.0.6",
+    "react-docgen-typescript-loader": "^3.3.0",
     "react-transition-group": "^4.3.0",
     "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
