--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "babel-jest": "^24.8.0",
     "d3": "^5.11.0",
     "decimal.js": "^10.2.0",
+    "geolib": "^3.1.0",
     "jest": "^24.9.0",
     "jest-dom": "^3.5.0",
     "leaflet": "^1.5.1",
     "lodash": "^4.17.11",
+    "node-hgt": "^1.2.3",
     "numeral": "^2.0.6",
     "react-docgen-typescript-loader": "^3.3.0",
     "react-transition-group": "^4.3.0",
