--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^24.0.18",
     "antd": "^3.19.1",
     "awesome-typescript-loader": "^5.2.1",
+    "axios": "^0.19.0",
     "babel-jest": "^24.8.0",
     "d3": "^5.11.0",
     "decimal.js": "^10.2.0",
@@ -38,6 +39,7 @@
     "lodash": "^4.17.11",
     "node-hgt": "^1.2.3",
     "numeral": "^2.0.6",
+    "querystring": "^0.2.0",
     "react-docgen-typescript-loader": "^3.3.0",
     "react-transition-group": "^4.3.0",
     "rollup": "^1.21.4",
