--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "test:watch": "jest --verbose --watch",
     "rollup": "rollup -c"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@fortawesome/react-fontawesome": "^0.1.4"
+  },
+  "dependencies": {
     "decimal.js": "^10.2.0",
     "geolib": "^3.1.0",
     "lodash": "^4.17.11",
