--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = dist
 	url = https://github.com/hiiamyes/frontend-cookbook.git
 	branch = dist
+[submodule "release"]
+	path = release
+	url = git@github.com:hiiamyes/frontend-cookbook.git
+	branch = release
