--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "test:watch": "jest --verbose --watch",
     "rollup": "rollup -c",
-    "release": "yarn rollup && yes | cp -rf dist/ release/dist/ && cd release && git add . && git commit -m 'update' && git push"
+    "release": "./scripts/release.sh"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.18",
@@ -23,12 +23,15 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "styled-components": "^5.1.1"
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "decimal.js": "^10.2.0",
     "geolib": "^3.1.0",
+    "leaflet": "^1.6.0",
     "lodash": "^4.17.11",
     "node-hgt": "^1.2.3",
     "numeral": "^2.0.6",
@@ -61,6 +64,7 @@
     "react-dom": "^16.13.1",
     "react-transition-group": "^4.3.0",
     "rollup": "2.11.2",
+    "styled-components": "^5.1.1",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   }
