--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "d3": "^5.16.0",
+    "formik": "^2.1.4",
     "jest": "^24.9.0",
     "jest-dom": "^3.5.0",
     "react": "^16.13.1",
