--- a/package.json
+++ b/package.json
@@ -53,14 +53,27 @@
     "@storybook/react": "^5.2.1",
     "@testing-library/react": "^8.0.4",
     "@types/jest": "^24.0.18",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
     "antd": "^3.19.1",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-eslint": "10.x",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "d3": "^5.16.0",
+    "eslint": "6.x",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "4.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "2.x",
     "formik": "^2.1.4",
     "jest": "^24.9.0",
     "jest-dom": "^3.5.0",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.3.0",
     "react-dom": "^16.13.1",
