--- a/package.json
+++ b/package.json
@@ -18,30 +18,17 @@
     "release": "./scripts/release.sh"
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.10",
-    "decimal.js": "^10.2.0",
-    "geolib": "^3.1.0",
-    "leaflet": "^1.6.0",
-    "lodash": "^4.17.11",
-    "node-hgt": "^1.2.3",
-    "numeral": "^2.0.6",
-    "querystring": "^0.2.0",
-    "yup": "^0.29.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-babel": "^5.0.3",
     "@rollup/plugin-commonjs": "^13.0.0",
@@ -58,9 +45,16 @@
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "d3": "^5.16.0",
+    "decimal.js": "^10.2.0",
     "formik": "^2.1.4",
+    "geolib": "^3.3.1",
     "jest": "^26.0.1",
     "jest-dom": "^4.0.0",
+    "leaflet": "^1.6.0",
+    "lodash": "^4.17.15",
+    "node-hgt": "^1.2.3",
+    "numeral": "^2.0.6",
+    "querystring": "^0.2.0",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
@@ -68,6 +62,8 @@
     "rollup": "2.16.1",
     "styled-components": "^5.1.1",
     "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "world-countries": "^4.0.0",
+    "yup": "^0.29.1"
   }
 }
