--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
+    "classnames": "^2.2.6",
     "d3": "^5.16.0",
     "decimal.js": "^10.2.0",
     "formik": "^2.1.4",
