--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-loader": "^8.1.0",
     "classnames": "^2.2.6",
     "d3": "^5.16.0",
+    "dayjs": "^1.8.29",
     "decimal.js": "^10.2.0",
     "formik": "^2.1.4",
     "geolib": "^3.3.1",
