--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.2.1",
     "@types/jest": "^26.0.0",
     "antd": "^4.3.4",
@@ -62,7 +63,6 @@
     "formik": "^2.1.4",
     "geolib": "^3.3.1",
     "jest": "^26.0.1",
-    "jest-dom": "^4.0.0",
     "leaflet": "^1.6.0",
     "lodash": "^4.17.15",
     "numeral": "^2.0.6",
