--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,8 @@ orbs:
   slack: circleci/slack@3.4.2
 jobs:
   build:
-    machine: true # uses default image circleci/classic:latest
+    docker:
+      - image: circleci/node:10.16.0
     steps:
       - checkout
       - run:
