--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "d3": "^5.16.0",
     "dayjs": "^1.8.29",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "dependencies": {
     "svg-country-flags": "^1.2.7"
