--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-dom": "^16.13.1",
     "react-transition-group": "^4.4.1",
     "rollup": "2.16.1",
+    "rollup-plugin-terser": "^7.0.2",
     "styled-components": "^5.1.1",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5",
