--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.2.6",
     "d3": "^5.16.0",
     "dayjs": "^1.8.29",
+    "polished": "^4.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
