--- a/package.json
+++ b/package.json
@@ -29,21 +29,21 @@
     "svg-country-flags": "^1.2.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.29",
-    "@fortawesome/free-solid-svg-icons": "^5.13.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-babel": "^5.0.3",
-    "@rollup/plugin-commonjs": "^13.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.1",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-info": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/react": "^5.3.19",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/addons": "^6.1.11",
+    "@storybook/react": "^6.1.11",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.2.1",
     "@types/jest": "^26.0.0",
@@ -51,33 +51,33 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
-    "d3": "^6.2.0",
+    "d3": "^6.3.1",
     "dayjs": "^1.8.29",
     "decimal.js": "^10.2.0",
-    "eslint": "6.x",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "4.x",
+    "eslint": "7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "5.2.0",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-jsx-a11y": "6.x",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "2.x",
-    "formik": "^2.1.4",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "formik": "^2.2.6",
     "geolib": "^3.3.1",
-    "jest": "^26.0.1",
-    "leaflet": "^1.6.0",
+    "jest": "^26.6.3",
+    "leaflet": "^1.7.1",
     "lodash": "^4.17.15",
     "numeral": "^2.0.6",
     "prettier": "^2.0.5",
     "querystring": "^0.2.0",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-docgen-typescript-loader": "^3.7.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-transition-group": "^4.4.1",
-    "rollup": "2.16.1",
+    "rollup": "2.35.1",
     "rollup-plugin-terser": "^7.0.2",
-    "styled-components": "^5.1.1",
+    "styled-components": "^5.2.1",
     "ts-jest": "^26.1.0",
     "typescript": "^3.9.5",
     "world-countries": "^4.0.0",
