--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.2.0"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0",
     "svg-country-flags": "^1.2.7"
   },
